<resources>
    <string name="app_name">Bill Please</string>
    <string name="am">Amount</string>
    <string name="numpax">Number of Pax</string>
    <string name="ds">Discount (%)</string>
    <string name="noSVS">No SVS</string>
    <string name="GST">GST</string>
    <string name="cash">Cash</string>
    <string name="PN">PayNow</string>
    <string name="sp">Split</string>
    <string name="reset">Reset</string>
    <string name="total">Total Bill:</string>
    <string name="eachpay">Each Pays:</string>
</resources>